--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <link href="../css/index.css" rel="stylesheet">
+    <link href="/sources/css/index.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- nav bar starts -->
     <div class="nav-bar">
         <div class="nav-content">
-            <img src="..\image\logo1.png" alt="logo" id="logo">
+            <img src="/images/logo1.png" alt="logo" id="logo">
             <input type="text" id="Search-box" placeholder="Search for veggies, fruits, dairy and much more">
             <!-- <i><span class="material-icons-outlined" id="glass"> -->
             <!-- search -->
@@ -79,9 +79,9 @@
     <!-- Carousel begins -->
     <div class='carousel'>
         <button id='prev' onclick="prevslide()"><span class="material-icons-outlined">arrow_back_ios</span></button>
-        <img src='../image/Join-the-movement.png' id='s1'>
-        <img src='../image/go-organic.png' id='s2'>
-        <img src='../image/pulses.png' id='s3'>
+        <img src='/images/Join-the-movement.png' id='s1'>
+        <img src='/images/go-organic.png' id='s2'>
+        <img src='/images/pulses.png' id='s3'>
         <button id='next' onclick="nextslide()"><span class="material-icons-outlined">arrow_forward_ios</span></button>
     </div>
     <!-- Carousel ends -->
@@ -92,7 +92,7 @@
             and
             support local farmers.<button id='Join-the-movement'>Join Now<span
                     class="material-icons-outlined">arrow_forward</span></button></p>
-        <img src="../image/farmer.jpg" alt="Image of a farmer" id="farmer">
+        <img src="/images/farmer.jpg" alt="Image of a farmer" id="farmer">
     </div>
     <!-- usp section ends -->
 
@@ -111,7 +111,7 @@
                                 class="sub-heading">&#8377 20 / kg</span>
                         </caption>
                         <tr>
-                            <td><img src="../image/carrots.jpg" alt="carrots" class="deal-cards"></td>
+                            <td><img src="/images/carrots.jpg" alt="carrots" class="deal-cards"></td>
                         </tr>
                     </table>
                 </a>
@@ -121,7 +121,7 @@
                                 class="sub-heading">&#8377 80 / kg</span>
                         </caption>
                         <tr>
-                            <td><img src="../image/oranges-for-sale.jpg" alt="oranges" class="deal-cards"></td>
+                            <td><img src="/images/oranges-for-sale.jpg" alt="oranges" class="deal-cards"></td>
                         </tr>
                     </table>
                 </a>
@@ -132,7 +132,7 @@
                 </a>
                 </caption>
                 <tr>
-                    <td><img src="../image/milk.jpg" alt="carrots" class="deal-cards"></td>
+                    <td><img src="/images/milk.jpg" alt="carrots" class="deal-cards"></td>
                 </tr>
                 </table>
                 </a>
@@ -143,7 +143,7 @@
                 </a>
                 </caption>
                 <tr>
-                    <td><img src="../image/honey-for-sale.jpg" alt="honey" class="deal-cards"></td>
+                    <td><img src="/images/honey-for-sale.jpg" alt="honey" class="deal-cards"></td>
                 </tr>
                 </table>
                 </a>
@@ -164,7 +164,7 @@
                                 class="sub-heading">&#8377 20 / kg</span>
                         </caption>
                         <tr>
-                            <td><img src="../image/carrots.jpg" alt="carrots" class="deal-cards"></td>
+                            <td><img src="/images/carrots.jpg" alt="carrots" class="deal-cards"></td>
                         </tr>
                     </table>
                 </a>
@@ -174,7 +174,7 @@
                                 class="sub-heading">&#8377 30 / kg</span>
                         </caption>
                         <tr>
-                            <td><img src="../image/capcicum.jpg" alt="capcicum" class="deal-cards"></td>
+                            <td><img src="/images/capcicum.jpg" alt="capcicum" class="deal-cards"></td>
                         </tr>
                     </table>
                 </a>
@@ -186,7 +186,7 @@
                 </a>
                 </caption>
                 <tr>
-                    <td><img src="../image/cauliflower.jpg" alt="cauliflower" class="deal-cards"></td>
+                    <td><img src="/images/cauliflower.jpg" alt="cauliflower" class="deal-cards"></td>
                 </tr>
                 </table>
                 </a>
@@ -197,7 +197,7 @@
                 </a>
                 </caption>
                 <tr>
-                    <td><img src="../image/beetroot.jpg" alt="beetroot" class="deal-cards"></td>
+                    <td><img src="/images/beetroot.jpg" alt="beetroot" class="deal-cards"></td>
                 </tr>
                 </table>
                 </a>
@@ -209,7 +209,7 @@
 
     <!--organic section starts here-->
     <div class="organic">
-        <img src="../image/oranges.jpg" id='organic-img' alt="oranges">
+        <img src="/images/oranges.jpg" id='organic-img' alt="oranges">
         <p>Worried about all those pestisides, adulteration, check out our 100% organic products, which can help you
             taste good food without any health risks.
             <button class='organic-btn'>Organic <span class="material-icons-outlined">arrow_forward</span></button>
@@ -234,7 +234,7 @@
                                         veggies</span>
                                 </caption>
                                 <tr>
-                                    <td><img src="../image/veggies.jpg" alt="veggies" id="poster"></td>
+                                    <td><img src="/images/veggies.jpg" alt="veggies" id="poster"></td>
                                 </tr>
                             </table>
                         </div>
@@ -255,7 +255,7 @@
                                         fruits</span>
                                 </caption>
                                 <tr>
-                                    <td><img src="../image/fruits.jpg" alt="fruits" id="poster"></td>
+                                    <td><img src="/images/fruits.jpg" alt="fruits" id="poster"></td>
                                 </tr>
                             </table>
                         </div>
@@ -276,7 +276,7 @@
                                         Special</span>
                                 </caption>
                                 <tr>
-                                    <td><img src="../image/dairy.jpg" alt="veggies" id="poster"></td>
+                                    <td><img src="/images/dairy.jpg" alt="veggies" id="poster"></td>
                                 </tr>
                             </table>
                         </div>
@@ -297,7 +297,7 @@
                                         Special</span>
                                 </caption>
                                 <tr>
-                                    <td><img src="../image/nuts.jpg" alt="nuts" id="poster"></td>
+                                    <td><img src="/images/nuts.jpg" alt="nuts" id="poster"></td>
                                 </tr>
                             </table>
                         </div>
@@ -318,7 +318,7 @@
                                         Spices</span>
                                 </caption>
                                 <tr>
-                                    <td><img src="../image/spices.jpg" alt="spices" id="poster"></td>
+                                    <td><img src="/images/spices.jpg" alt="spices" id="poster"></td>
                                 </tr>
                             </table>
                         </div>
@@ -341,7 +341,7 @@
                                         Special</span>
                                 </caption>
                                 <tr>
-                                    <td><img src="../image/pulses.jpg" alt="veggies" id="poster"></td>
+                                    <td><img src="/images/pulses.jpg" alt="veggies" id="poster"></td>
                                 </tr>
                             </table>
                         </div>
@@ -379,7 +379,7 @@
                             <caption style="caption-side: bottom;"><span class='txt-header'>Emily</span></caption>
                             <tr>
                                 <td>
-                                    <img src="../image/profile-img-1.jpg" class="profile-img" alt="profile">
+                                    <img src="/images/profile-img-1.jpg" class="profile-img" alt="profile">
                                 </td>
                             </tr>
                         </table>
@@ -393,7 +393,7 @@
                             <caption style="caption-side: bottom;"><span class='txt-header'>David</span></caption>
                             <tr>
                                 <td>
-                                    <img src="../image/profile-img-2.jpg" class="profile-img" alt="profile">
+                                    <img src="/images/profile-img-2.jpg" class="profile-img" alt="profile">
                                 </td>
                             </tr>
                         </table>
@@ -408,7 +408,7 @@
                             <caption style="caption-side: bottom;"><span class='txt-header'>Oliver</span></caption>
                             <tr>
                                 <td>
-                                    <img src="../image/profile-img-3.png" class="profile-img" alt="profile">
+                                    <img src="/images/profile-img-3.png" class="profile-img" alt="profile">
                                 </td>
                             </tr>
                         </table>
@@ -423,7 +423,7 @@
                             <caption style="caption-side: bottom;"><span class='txt-header'>John</span></caption>
                             <tr>
                                 <td>
-                                    <img src="../image/profile-img-4.png" class="profile-img" alt="profile">
+                                    <img src="/images/profile-img-4.png" class="profile-img" alt="profile">
                                 </td>
                             </tr>
                         </table>
@@ -438,7 +438,7 @@
                             <caption style="caption-side: bottom;"><span class='txt-header'>Jenifer</span></caption>
                             <tr>
                                 <td>
-                                    <img src="../image/profile-img-5.jpg" class="profile-img" alt="profile">
+                                    <img src="/images/profile-img-5.jpg" class="profile-img" alt="profile">
                                 </td>
                             </tr>
                         </table>
@@ -453,7 +453,7 @@
                             <caption style="caption-side: bottom;"><span class='txt-header'>Curran</span></caption>
                             <tr>
                                 <td>
-                                    <img src="../image/profile-img-6.png" class="profile-img" alt="profile">
+                                    <img src="/images/profile-img-6.png" class="profile-img" alt="profile">
                                 </td>
                             </tr>
                         </table>
@@ -499,7 +499,7 @@
     <!--Footer End-->
 
     <!-- Script -->
-    <script src="../js/index.js"></script>
+    <script src="sources/javascript/index.js"></script>
 </body>
 
 </html>
